syntax = "proto3";

package engine;

import "google/api/annotations.proto";

service BucketService {
    // Create Bucket
    rpc CreateBucket (CreateBucketRequest) returns (Bucket) {
        option (google.api.http) = {
            post: "/call_center/buckets"
            body: "*"
        };
    }
    // List of Bucket
    rpc SearchBucket(SearchBucketRequest) returns (ListBucket) {
        option (google.api.http) = {
            get: "/call_center/buckets"
        };
    }
    // Bucket item
    rpc ReadBucket(ReadBucketRequest) returns (Bucket) {
        option (google.api.http) = {
            get: "/call_center/buckets/{id}"
        };
    }
    // Update Bucket
    rpc UpdateBucket(UpdateBucketRequest) returns (Bucket) {
        option (google.api.http) = {
            put: "/call_center/buckets/{id}"
            body: "*"
        };
    }
    // Remove Bucket
    rpc DeleteBucket(DeleteBucketRequest) returns (Bucket) {
        option (google.api.http) = {
            delete: "/call_center/buckets/{id}"
        };
    }
}

message DeleteBucketRequest {
    int64 id = 1;
    int64 domain_id = 2;
}

message UpdateBucketRequest {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 domain_id = 4;
}

message SearchBucketRequest {
    int32 size = 1;
    int32 page = 2;
    int64 domain_id = 3;
}

message ListBucket {
    repeated Bucket items = 1;
}

message ReadBucketRequest {
    int64 id = 1;
    int64 domain_id = 2;
}

message CreateBucketRequest {
    string name = 1;
    string description = 2;
    int64 domain_id = 3;
}

message Bucket {
    int64 id = 1;
    string name = 2;
    string description = 3;
}